force-app/main/default/objects/Salesorder__c/Salesorder__c.object-meta.xml
<CustomObject>
    <label>Salesorder</label>
    <nameField>
        <displayFormat>SO-{000}</displayFormat>
        <label>Salesorder No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesorders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>