force-app/main/default/objects/Salesorder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salesorders</relationshipLabel>
    <relationshipName>Salesorders</relationshipName>
    <type>Lookup</type>
</CustomField>