force-app/main/default/objects/Salesorder__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunitiescustom__c</referenceTo>
    <relationshipLabel>Salesorders</relationshipLabel>
    <relationshipName>Salesorders</relationshipName>
    <type>Lookup</type>
</CustomField>