force-app/main/default/objects/Salesorder__c/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. 50% advance payment to be made along with confirmed purchase order, 50% before despatch</fullName>
            </value>
            <value>
                <fullName>2. 100% Advance along with PO</fullName>
            </value>
            <value>
                <fullName>3. 100% against Delivery</fullName>
            </value>
            <value>
                <fullName>4. 10 Days Net</fullName>
            </value>
            <value>
                <fullName>5. 30 Days Net</fullName>
            </value>
            <value>
                <fullName>6. 45 Days Net</fullName>
            </value>
            <value>
                <fullName>7. Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>