force-app/main/default/objects/Salesorder__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>Salesorders</relationshipLabel>
    <relationshipName>Salesorders</relationshipName>
    <type>Lookup</type>
</CustomField>