force-app/main/default/objects/Salesorder__c/fields/Salesorder_Date__c.field-meta.xml
<CustomField>
    <fullName>Salesorder_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesorder Date</label>
    <type>Date</type>
</CustomField>